2012-08-03 Harri Pitkänen <hatapitk@iki.fi>
	* Support building without hardcoded DICTIONARY_PATH (needed for Android).

2012-08-01 Harri Pitkänen <hatapitk@iki.fi>
	* Support homonyms for verb negatives.

2012-06-18 Harri Pitkänen <hatapitk@iki.fi>
	* Fix false positives from extra verb check.
	* Update version numbers for 3.5.

2012-05-14 Harri Pitkänen <hatapitk@iki.fi>
	* Check for extra main verbs.

2012-05-01 Harri Pitkänen <hatapitk@iki.fi>
	* Codepoints in Latin Extended-B block are letters.

2012-04-01 Harri Pitkänen <hatapitk@iki.fi>
	* Update project files for .Net interface to .Net 4.0 since compiler for
	  3.5 does not seem to be the default on Debian unstable anymore.

2012-03-26 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest replacement e->ä

2012-03-25 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest more character replacements

2012-03-24 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest some two character deletions

2012-03-21 Harri Pitkänen <hatapitk@iki.fi>
	* Generate more spelling suggestions

2012-03-06 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest replacement i->e

2012-03-05 Harri Pitkänen <hatapitk@iki.fi>
	* Core code and VFST backend licensed under MPL 1.1 / GPL 2+ /
	  LGPL 2.1+ tri-license.

2012-02-27 Harri Pitkänen <hatapitk@iki.fi>
	* Add new option to voikkospell: -M for morphological analysis without
	  spell checking.

2012-02-12 Harri Pitkänen <hatapitk@iki.fi>
	* Added initial VFST lookup code.

2012-02-11 Harri Pitkänen <hatapitk@iki.fi>
	* Try replacing two characters in OCR suggestion mode.

2012-01-28 Harri Pitkänen <hatapitk@iki.fi>
	* Add canonical decompositions for Russian and Komi alphabet.

2012-01-25 Sjur Moshagen <sjurnm@mac.com>
	* Add support for cyrillic alphabet

2012-01-15 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with MSVC

2012-01-14 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with GCC 4.7
	* Update version numbers for 3.4.1

2011-12-15 Harri Pitkänen <hatapitk@iki.fi>
	* Be more careful with ordinal ranges.
