@@ -1,3 +1,6 @@
+2012-08-04 Harri Pitkänen <hatapitk@iki.fi>
+	* mmap may be available even if getpwuid_r is not.
+
 2012-08-03 Harri Pitkänen <hatapitk@iki.fi>
 	* Support building without hardcoded DICTIONARY_PATH (needed for Android).
 
